--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Document</title>
+		<title>Portfolio's Kevin Guzman</title>
 	</head>
-	<body></body>
+	<body>
+		<h1>Hello wdd-330, I am Kevin Guzman</h1>
+	</body>
 </html>
