--- a/index.html
+++ b/index.html
@@ -4,9 +4,15 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Portfolio's Kevin Guzman</title>
+		<title>Kevin's Portfolio</title>
+		<link rel="stylesheet" href="css/styles.css" />
 	</head>
 	<body>
-		<h1>Hello wdd-330, I am Kevin Guzman</h1>
+		<div class="container">
+			<h1>WDD-330 Kevin's Portfolio</h1>
+			<h2>Block 1</h2>
+			<ol class="list"></ol>
+		</div>
 	</body>
+	<script src="js/main.js"></script>
 </html>
