--- a/week02/week02teamactivity.html
+++ b/week02/week02teamactivity.html
@@ -33,6 +33,11 @@
 			<div id="addingAnswer"></div>
 		</main>
 		<footer>
+			<a
+				href="https://byui.zoom.us/rec/share/ghZmN-FkyUTaEQ58gsOODEYTCf8IRG5iEOou-eAkngbN1xXO4nL-87RQ-U4YriYB.fBAIq-WH22_HbKUP"
+				>Meeting Recording</a
+			>
+			<p>Access Passcode: vY5?K7Bf</p>
 			<a href="../index.html">Return to Week 2</a>
 		</footer>
 		<script>
