--- a/week02/week02teamactivity.html
+++ b/week02/week02teamactivity.html
@@ -35,6 +35,7 @@
 		<footer>
 			<a
 				href="https://byui.zoom.us/rec/share/ghZmN-FkyUTaEQ58gsOODEYTCf8IRG5iEOou-eAkngbN1xXO4nL-87RQ-U4YriYB.fBAIq-WH22_HbKUP"
+				target="_blank"
 				>Meeting Recording</a
 			>
 			<p>Access Passcode: vY5?K7Bf</p>
