--- a/week03/ch07exercises.html
+++ b/week03/ch07exercises.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<title>Events Examples</title>
+		<link rel="stylesheet" href="/css/styles.css" />
 
 		<style>
 			.mainContent {
