--- a/week03/index_03.html
+++ b/week03/index_03.html
@@ -10,7 +10,7 @@
 			content="Reading notes and Assignments completed during Week 3 of the semester."
 		/>
 		<title>Week 3</title>
-		<link rel="stylesheet" href="/css/styles.css" />
+		<link rel="stylesheet" href="../css/styles.css" />
 	</head>
 
 	<body>
