--- a/week03/ch06exercises.html
+++ b/week03/ch06exercises.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<title>Justice League</title>
+		<link rel="stylesheet" href="../css/styles.css" />
 	</head>
 
 	<body>
