uploading code from week 04

--- a/week04/index_04.html
+++ b/week04/index_04.html
@@ -28,10 +28,10 @@
 					Modular Javascript
 				</li>
 				<li>
-					<a href="w4activity.html">Week 4 Activity</a>
+					<a href="week04Activity.html">Week 4 Activity</a>
 				</li>
 				<li>
-					<a href="w4teamactivity.html">Team Activity</a>
+					<a href="w04TeamActivity.html">Team Activity</a>
 				</li>
 			</ul>
 			<h3>Questions:</h3>
