--- a/week04/hero_04.html
+++ b/week04/hero_04.html
@@ -105,7 +105,7 @@
 			</form>
 		</main>
 		<footer>
-			<a href="ch8exercises.html">Return to Chapter 8 Notes</a>
+			<a href="chap-08exercises.html">Return to Chapter 8 Notes</a>
 		</footer>
 		<script src="hero_04.js"></script>
 	</body>
