--- a/week04/week04Activity.html
+++ b/week04/week04Activity.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Week 4 Activity: Form Validation</title>
-		<link rel="stylesheet" href="../css/normalize.css" />
+		<link rel="stylesheet" href="../css/styles.css" />
 	</head>
 
 	<body>
@@ -46,7 +46,7 @@
 			</p>
 		</main>
 		<footer>
-			<a href="index.html">Return to Week 4</a>
+			<a href="../index.html">Return to Week 4</a>
 		</footer>
 		<script type="module" src="script.js"></script>
 	</body>
