--- a/week04/w04TeamActivity.html
+++ b/week04/w04TeamActivity.html
@@ -32,7 +32,7 @@
 			<p>Note: This game only works with touch, not clicking.</p>
 		</main>
 		<footer>
-			<a href="index.html">Return to Week 4</a>
+			<a href="../index.html">Return to Week 4</a>
 		</footer>
 		<script src="tic-tac-toe.js"></script>
 	</body>
