--- a/week05/chp10Exercises.html
+++ b/week05/chp10Exercises.html
@@ -5,17 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Week 5 Chapter 10</title>
-		<link rel="stylesheet" href="../css/normalize.css" />
-		<link rel="stylesheet" href="../css/small.css" />
-		<link rel="stylesheet" href="../css/medium.css" />
-		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-		<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
-		<link rel="manifest" href="/site.webmanifest" />
-		<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#395b50" />
-		<meta name="msapplication-TileColor" content="#00aba9" />
-		<meta name="theme-color" content="#395b50" />
-		<style></style>
+		<link rel="stylesheet" href="../css/styles.css" />
 	</head>
 
 	<body>
