--- a/week07/index_07.html
+++ b/week07/index_07.html
@@ -30,7 +30,7 @@
 					Resource Sharing
 				</li>
 				<li>
-					<a href="w7teamactivity.html">Team Activity</a>
+					<a href="w07_TeamActivity.html">Team Activity</a>
 				</li>
 			</ul>
 			<h3>Questions:</h3>
