--- a/week07/w07_TeamActivity.html
+++ b/week07/w07_TeamActivity.html
@@ -6,6 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 
 		<link rel="stylesheet" href="../css/styles.css" />
+		<link rel="stylesheet" href="styles.css" />
 	</head>
 
 	<body>
@@ -20,6 +21,6 @@
 		<footer>
 			<a href="../index.html">Return to Week 7</a>
 		</footer>
-		<script src="app5.js" type="module"></script>
+		<script src="app.js" type="module"></script>
 	</body>
 </html>
