--- a/week08/w08_TeamActivity.html
+++ b/week08/w08_TeamActivity.html
@@ -26,6 +26,6 @@
 		<footer>
 			<a href="../index.html">Return to Week 8</a>
 		</footer>
-		<script src="script.js"></script>
+		<script src="scripts.js"></script>
 	</body>
 </html>
