--- a/week09/websocket.html
+++ b/week09/websocket.html
@@ -13,7 +13,7 @@
 			<h1>WDD 330 Portfolio</h1>
 		</header>
 		<main>
-			<h2 class="mainTitle">Websocket Example</h2>
+			<h2>Websocket Example</h2>
 			<form>
 				<label for="message"
 					>Enter a Message:
@@ -24,7 +24,7 @@
 			<div id="output"></div>
 		</main>
 		<footer>
-			<a href="ch14exercises.html">Return to Chapter 14 Notes</a>
+			<a href="chap_14Exercises.html">Return to Chapter 14 Notes</a>
 		</footer>
 
 		<script>
