--- a/project/game.html
+++ b/project/game.html
@@ -5,12 +5,29 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Quick Quiz - Play Page</title>
-		<link rel="stylesheet" href="./css/styles.css" />
 		<link rel="stylesheet" href="./css/normalize.css" />
+		<link rel="stylesheet" href="./css/styles.css" />
 	</head>
 	<body>
 		<main class="container">
-			<section id="game" class="justify-center flex-column">
+			<h1>Quick Quiz!</h1>
+			<!-- <div id="loader"></div> -->
+			<section id="game" class="justify-center flex-column hidden">
+				<div id="hud">
+					<div class="hud-item">
+						<p id="progressText" class="hud-prefix">Question</p>
+						<div id="progressBar">
+							<div id="progressBarFull"></div>
+						</div>
+
+						<!-- <h2 class="hud-main-text" id="questionCounter">1/3</h2> -->
+					</div>
+					<div class="hud-item">
+						<p class="hud-prefix">Score</p>
+						<h2 class="hud-main-text" id="score">0</h2>
+					</div>
+				</div>
+
 				<h2 id="question">What is your answer to this question?</h2>
 				<div class="choice-container">
 					<p class="choice-prefix">A</p>
