--- a/project/index.html
+++ b/project/index.html
@@ -13,7 +13,7 @@
 			<section class="home">
 				<h1>Quick Quiz!</h1>
 				<a class="btn" href="game.html">Play</a>
-				<a class="btn" href="highscores.html">High Scores</a>
+				<a class="btn" href="highscore.html">High Scores</a>
 			</section>
 		</main>
 	</body>
