--- a/project/game.html
+++ b/project/game.html
@@ -11,16 +11,14 @@
 	<body>
 		<main class="container">
 			<h1>Quick Quiz!</h1>
-			<!-- <div id="loader"></div> -->
-			<section id="game" class="justify-center flex-column hidden">
+
+			<section id="game" class="justify-center flex-column">
 				<div id="hud">
 					<div class="hud-item">
 						<p id="progressText" class="hud-prefix">Question</p>
 						<div id="progressBar">
 							<div id="progressBarFull"></div>
 						</div>
-
-						<!-- <h2 class="hud-main-text" id="questionCounter">1/3</h2> -->
 					</div>
 					<div class="hud-item">
 						<p class="hud-prefix">Score</p>
